k8s/loyalty-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth-api
  name: auth-api
  namespace: yoyo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
        - image: fabfab/auth-api:v1
          name: auth-api
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loyalty-worker
  name: loyalty-worker-service
  namespace: yoyo
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: loyalty-worker
  type: NodePort
status:
  loadBalancer: {}
