k8s/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-queue
  name: redis-queue
  namespace: yoyo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-queue
  template:
    metadata:
      labels:
        app: redis-queue
    spec:
      containers:
        - image: redis:latest
          name: redis-queue
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-queue
  name: redis-service
  namespace: yoyo
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis-queue
  type: NodePort
status:
  loadBalancer: {}
